--- a/templates/view.html
+++ b/templates/view.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <title>Find a Donor</title>
@@ -11,17 +11,17 @@
 <body style="background-color: #d1e7dd;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shift">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Co-Info</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Co-Info</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="register.html">Register as a Donor</a>
+                <a class="nav-link active" aria-current="page" href="{{ url_for('register') }}">Register as a Donor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Find Donors</a>
+                <a class="nav-link active" href="{{ url_for('view') }}">Find Donors</a>
               </li>
               
             </ul>
@@ -38,9 +38,9 @@
                       </h1>
                     </center>
                     <center>
-                      <form action="" class="statesearch">
+                      <form action="" class="statesearch" id= 'form1' action="{{ url_for('view') }}" method="POST">
                        
-                        <select class="form-select" aria-label="State" style="width: 20%;">
+                        <select class="form-select" aria-label="State" name = 'state' id = 'state' style="width: 20%;">
                         <option selected>Select</option>
                         <option value="Andhra Pradesh">Andhra Pradesh</option>
                         <option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -79,7 +79,7 @@
                         <option value="West Bengal">West Bengal</option>
                         <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                       </select>
-                      <button type="button" class="btn btn-outline-success statesearchbtn">Search</button>
+                      <button type="submit" form="form1" class="btn btn-outline-success statesearchbtn">Search</button>
                       </form>
                     </center>
                   </div>
@@ -88,11 +88,20 @@
                       <table class="results">
                         <tr class="mainrow">
                           <th>Name</th>
+                          <th>Age</th>
                           <th>Blood Group</th>
-                          <th>Phone</th>
-                          <th>Email</th>
                           <th>City</th>
+                          <th>Phone</th>
                         </tr>
+                        {% for (k,v,z,y,w) in data %}
+                        <tr style = ' width: 250px;text-align: center;border: 2px solid #208454;'>
+                        <td>{{ k }}</td>
+                        <td>{{ v }}</td>
+                        <td>{{ z }}</td>
+                        <td>{{ y }}</td>
+                        <td>{{ w }}</td>
+                        </tr>
+        {% endfor %}
                       </table>
                     </center>
                   </div>
